knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clone_Record__e/Clone_Record__e.object-meta.xml
<CustomObject>
    <label>Clone Record</label>
    <pluralLabel>Clone Records</pluralLabel>
</CustomObject>