knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clone_Record__e/fields/Attribute_2__c.field-meta.xml
<CustomField>
    <fullName>Attribute_2__c</fullName>
    <label>Attribute 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>