knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clone_Record__e/fields/Attribute_3__c.field-meta.xml
<CustomField>
    <fullName>Attribute_3__c</fullName>
    <label>Attribute 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>