knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clone_Record__e/fields/Id_of_Record_To_Clone__c.field-meta.xml
<CustomField>
    <fullName>Id_of_Record_To_Clone__c</fullName>
    <label>Id of Record To Clone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>