knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clone_Record__e/fields/sObject_Name__c.field-meta.xml
<CustomField>
    <fullName>sObject_Name__c</fullName>
    <label>sObject Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>